plugins/groovy/testdata/highlighting/VariableDeclarationDuplicateModifiers.groovy
def final <error descr="Duplicate modifier 'def'">def</error> foo = 44